@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-08-05T00:51:49Z",
+  "timestamp" : "2022-08-05T16:11:49Z",
   "count_outdated" : 1767,
   "uniques_outdated" : 116,
-  "count" : 1804,
-  "uniques" : 126,
+  "count" : 1784,
+  "uniques" : 125,
   "views" : [
     {
       "timestamp": "2022-07-22T00:00:00Z",
-      "count": 25,
-      "count_minmax": [ 20, 25 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 5,
+      "count_minmax": [ 5, 25 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-07-23T00:00:00Z",
