@@ -1,11 +1,11 @@
 {
-  "count": 37,
-  "uniques": 2,
+  "count": 17,
+  "uniques": 1,
   "views": [
     {
       "timestamp": "2022-07-22T00:00:00Z",
-      "count": 25,
-      "uniques": 2
+      "count": 5,
+      "uniques": 1
     },
     {
       "timestamp": "2022-07-23T00:00:00Z",
