@@ -1,3 +1,10 @@
+2022-08-05T16:11:49Z:
+* notice: last 14d: unq all: 1 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 116 1767 / 126 1804
+* notice: next accum: outdated-unq outdated-all / unq all: 116 1767 / 125 1784
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -20 / +2 +25 -1 -20 / 1 5
+* notice: removed / changed dates: [] / [2022-07-22]
+
 2022-08-05T00:51:49Z:
 * notice: last 14d: unq all: 2 37
 * notice: prev accum: outdated-unq outdated-all / unq all: 113 1714 / 126 1804
